change grid and fix accordian container overflow

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -225,13 +225,19 @@ a.next {
 .play_quiz_end_score_info {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 20% 60% 20%;
+    grid-template-rows: 15% 5% 60% 20%;
     height: 100%;
     align-items: center;
 }
 
-.play_quiz_end_questions_container {
+.play_quiz_end_question_title {
     grid-area: 2 / 1 / 3 / 3;
+    height: 100%;
+    overflow: auto;
+}
+
+.play_quiz_end_questions_container {
+    grid-area: 3 / 1 / 4 / 3;
     height: 100%;
     overflow: auto;
 }
@@ -252,7 +258,7 @@ a.next {
 }
 
 .play_quiz_end_menu_controls {
-    grid-area: 3 / 1 / 4 / 3;
+    grid-area: 4 / 1 / 5 / 3;
 }
 
 /* Media Queries */
